pxc/tests/test_157_funcptr/fp5.px
public namespace fp5;
public import core::common -;
public import core::meta m;
public import core::pointer::tfuncptr -;

public pure function int test_fp(int mutable& x)
{
  x += 3;
  return x * 2;
}

public pure function double test_fp2(int x, double y)
{
  return static_cast{double}(x) + y;
}

pure function int ex(tfuncptr{int, {{int, 1, 1}}} fp, int mutable& v)
{
  return fp(v);
}

pure function tfuncptr{int, {{int, 1, 1}}} get_fp()
{
  return make_tfuncptr{test_fp}();
}

{
  const f = get_fp();
  println(m::full_string{m::typeof{f}});
  const y = f(123); // error: argument 0 must have lvalue
  // int v = 123;
  // const y = ex(f, v);
  // println(v);
  println(y);
  const g = make_tfuncptr{test_fp2}();
  const r = g(500, 12.5);
  println(r);
}

